# zero2production

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20210724184158_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
